Add L200 and UL200

--- a/BENCHMARK/Plotting.ipynb
+++ b/BENCHMARK/Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,34 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_FOLDERS = ['NO_LATENCY_RESULTS', '05MS_LATENCY_RESULTS', '5MS_LATENCY_RESULTS', '25MS_LATENCY_RESULTS',\n",
+    "RESULTS_FOLDERS = ['0MS_LATENCY_RESULTS', '05MS_LATENCY_RESULTS', '5MS_LATENCY_RESULTS', '25MS_LATENCY_RESULTS',\n",
     "                   '50MS_LATENCY_RESULTS', '100MS_LATENCY_RESULTS', '200MS_LATENCY_RESULTS']\n",
     "\n",
-    "RESULTS_FOLDER = RESULTS_FOLDERS[0]"
+    "RESULTS_FOLDER = RESULTS_FOLDERS[6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mnist250_9c_640s_1566812935.csv\n",
-      "mnist250_5c_640s_1566812655.csv\n",
-      "mnist250_4c_640s_1566812621.csv\n",
-      "mnist250_2c_640s_1566812570.csv\n",
-      "mnist250_3c_640s_1566812594.csv\n",
-      "mnist250_10c_640s_1566813116.csv\n",
-      "mnist250_8c_640s_1566812806.csv\n",
-      "mnist250_6c_640s_1566812694.csv\n",
-      "mnist250_7c_640s_1566812745.csv\n"
+      "mnist250_3c_640s_1566817870.csv\n",
+      "mnist250_7c_640s_1566818101.csv\n",
+      "mnist250_8c_640s_1566818199.csv\n",
+      "mnist250_4c_640s_1566817910.csv\n",
+      "mnist250_5c_640s_1566817959.csv\n",
+      "mnist250_10c_640s_1566818542.csv\n",
+      "mnist250_9c_640s_1566818343.csv\n",
+      "mnist250_2c_640s_1566817833.csv\n",
+      "mnist250_6c_640s_1566818021.csv\n"
      ]
     }
    ],
@@ -54,48 +54,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mnist250_9c_640s_1566812935.csv\n",
-      "0.2056310987472534\n",
-      "0.3838051672609066\n",
+      "mnist250_3c_640s_1566817870.csv\n",
+      "0.03904051158078917\n",
+      "0.09338163561621622\n",
       "------------------\n",
-      "mnist250_5c_640s_1566812655.csv\n",
-      "0.04189220578724165\n",
-      "0.08419884912993764\n",
+      "mnist250_7c_640s_1566818101.csv\n",
+      "0.10247086945433205\n",
+      "0.22224090700761934\n",
       "------------------\n",
-      "mnist250_4c_640s_1566812621.csv\n",
-      "0.03665830235962474\n",
-      "0.07498836058613395\n",
+      "mnist250_8c_640s_1566818199.csv\n",
+      "0.15758896477614778\n",
+      "0.3225373891679752\n",
       "------------------\n",
-      "mnist250_2c_640s_1566812570.csv\n",
-      "0.02504944350065117\n",
-      "0.05327391600536251\n",
+      "mnist250_4c_640s_1566817910.csv\n",
+      "0.049759749985911365\n",
+      "0.11242149973433037\n",
       "------------------\n",
-      "mnist250_3c_640s_1566812594.csv\n",
-      "0.027439037703241183\n",
-      "0.059776248113604345\n",
+      "mnist250_5c_640s_1566817959.csv\n",
+      "0.060294808660234726\n",
+      "0.13551202832873993\n",
       "------------------\n",
-      "mnist250_10c_640s_1566813116.csv\n",
-      "0.3191975347650876\n",
-      "0.630861246247114\n",
+      "mnist250_10c_640s_1566818542.csv\n",
+      "0.3324032912075316\n",
+      "0.6830597096553324\n",
       "------------------\n",
-      "mnist250_8c_640s_1566812806.csv\n",
-      "0.14476509094238282\n",
-      "0.2812577139204032\n",
+      "mnist250_9c_640s_1566818343.csv\n",
+      "0.216154067203252\n",
+      "0.4281731831847872\n",
       "------------------\n",
-      "mnist250_6c_640s_1566812694.csv\n",
-      "0.05191353330873463\n",
-      "0.11281462267327294\n",
+      "mnist250_2c_640s_1566817833.csv\n",
+      "0.03496894894576654\n",
+      "0.08483571941013736\n",
       "------------------\n",
-      "mnist250_7c_640s_1566812745.csv\n",
-      "0.06636824216998992\n",
-      "0.13278451682741332\n",
+      "mnist250_6c_640s_1566818021.csv\n",
+      "0.08052012950751432\n",
+      "0.18371533885244049\n",
       "------------------\n"
      ]
     }
@@ -128,14 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.02504944350065117, 0.027439037703241183, 0.03665830235962474, 0.04189220578724165, 0.05191353330873463, 0.06636824216998992, 0.14476509094238282, 0.2056310987472534, 0.3191975347650876]\n"
+      "[0.08483571941013736, 0.09338163561621622, 0.11242149973433037, 0.13551202832873993, 0.18371533885244049, 0.22224090700761934, 0.3225373891679752, 0.4281731831847872, 0.6830597096553324]\n",
+      "[0.03496894894576654, 0.03904051158078917, 0.049759749985911365, 0.060294808660234726, 0.08052012950751432, 0.10247086945433205, 0.15758896477614778, 0.216154067203252, 0.3324032912075316]\n"
      ]
     }
    ],
@@ -143,12 +144,13 @@
     "LABELED_RESULTS = sorted(LABELED_RESULTS)\n",
     "UNLABELED_RESULTS = sorted(UNLABELED_RESULTS)\n",
     "\n",
+    "print(LABELED_RESULTS)\n",
     "print(UNLABELED_RESULTS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
     "L_25 = [0.058525652164735646, 0.06639834546064224, 0.08644665474359309, 0.09706586084840335, 0.12658107143442268, 0.15407243112402796, 0.3093516469046962, 0.4074708614155767, 0.655767792010913]\n",
     "L_50 = [0.0665749642329355, 0.07105604282067272, 0.09184184824639509, 0.10148602595412491, 0.13428193557085583, 0.1653775772702327, 0.3004383901620941, 0.42101882778928706, 0.6456530300883414]\n",
     "L_100 = [0.07383622733297401, 0.07934330949364732, 0.10529309540323636, 0.11936645195820726, 0.15326809314445022, 0.18636845057313908, 0.3044701933939372, 0.41940408105671767, 0.6700964192507937]\n",
-    "L_200 = []\n",
+    "L_200 = [0.08483571941013736, 0.09338163561621622, 0.11242149973433037, 0.13551202832873993, 0.18371533885244049, 0.22224090700761934, 0.3225373891679752, 0.4281731831847872, 0.6830597096553324]\n",
     "\n",
     "# Summary results (unlabeled)\n",
     "UL_0 = [0.02504944350065117, 0.027439037703241183, 0.03665830235962474, 0.04189220578724165, 0.05191353330873463, 0.06636824216998992, 0.14476509094238282, 0.2056310987472534, 0.3191975347650876]\n",
@@ -173,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x120ceff60>]"
+       "[<matplotlib.lines.Line2D at 0x120e95d30>]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -215,13 +217,6 @@
     "ax.plot(x, L_100)\n",
     "#ax.plot(x, L_200)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
